@@ -203,9 +203,9 @@ to print the corresponding values, or T for all of them.")
       (ADDRESS
        (format stream (TEXT "a machine address.")))))
   (:method ((obj clos:standard-object) (stream stream))
-      (format stream (TEXT "an instance of the CLOS class ~S.")
-              (clos:class-of obj))
-   (describe-slotted-object obj stream))
+    (format stream (TEXT "an instance of the CLOS class ~S.")
+            (clos:class-of obj))
+    (describe-slotted-object obj stream))
   (:method ((obj structure-object) (stream stream)) ; CLISP specific
     (format stream (TEXT "a structure of type ~S.")
             (type-of obj))
@@ -222,9 +222,10 @@ to print the corresponding values, or T for all of them.")
           (if (> len 1)
             (format stream (TEXT "a dotted list of length ~S.")
                     len)
-            (progn (format stream (TEXT "a cons."))
-                   (describe (car obj) stream)
-                   (describe (cdr obj) stream)))
+            (progn
+              (format stream (TEXT "a cons."))
+              (describe (car obj) stream)
+              (describe (cdr obj) stream)))
           (format stream (TEXT "a list of length ~S.")
                   len))
         (format stream (TEXT "a cyclic list.")))))
@@ -516,19 +517,21 @@ to print the corresponding values, or T for all of them.")
   (let ((objstring (sys::write-to-short-string
                     obj (or *print-right-margin* sys::*prin-linelength*))))
     (fresh-line stream)
-    (terpri stream)
+    (terpri stream) ; blank line
     (if (memq obj *describe-done*)
       (format stream (TEXT "~A [see above]") objstring)
       (let ((doc (gethash obj *documentation*)))
         (push obj *describe-done*)
         (format stream (TEXT "~A is ") objstring)
         (describe-object obj stream)
+        (fresh-line stream)
         (when doc
-          (fresh-line stream)
+          (terpri stream) ; blank line
           (format stream (TEXT "Documentation:"))
           (do ((tail doc (cddr tail)))
               ((endp tail))
-            (format stream "~&~s:~%~s" (car tail) (cadr tail)))))))
+            (format stream "~&~s:~%~s" (car tail) (cadr tail)))
+          (fresh-line stream)))))
   (finish-output stream))
 
 ;; A private class through which we can distinguish recursive describe calls
